# mlops-agents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/fraud_detection/: README.md  demo.py  demo_live.py  demo_pipeline.py  fraud_model.ipynb  pipeline.yaml  train.py
infra/: Dockerfile.serve  docker-compose.yml  serve.py
infra/cloud_function/: main.py  requirements.txt
infra/terraform/gcp/: bigquery.tf  cloud_function.tf  cloudrun.tf  gcs.tf  main.tf  terraform.tfvars.example  variables.tf  vertex.tf
src/mlops_agents/: __init__.py
src/mlops_agents/agents/: cicd.py  deployment.py  evaluation.py  feedback.py  monitoring.py  retraining.py
src/mlops_agents/cli/: main.py
src/mlops_agents/core/: agent.py  audit.py  config.py  decision.py  event.py  observatory.py  pipeline.py  reasoning.py
src/mlops_agents/ingest/: generator.py  parser.py
src/mlops_agents/providers/: protocols.py  registry.py
src/mlops_agents/providers/gcp/: bigquery.py  cloudrun.py  experiments.py  gcs.py  pubsub.py  vertex.py
src/mlops_agents/providers/local/: compute.py  duckdb.py  eventbus.py  mlflow.py  serving.py  storage.py
tests/agents/: test_cicd.py  test_deployment.py  test_evaluation.py  test_feedback.py  test_monitoring.py  test_retraining.py
tests/core/: test_agent.py  test_audit.py  test_cli.py  test_config.py  test_decision.py  test_event.py  test_pipeline.py  test_reasoning.py
tests/ingest/: test_generator.py  test_parser.py
tests/providers/: test_local_data.py  test_local_mlplatform.py  test_local_serving.py  test_local_storage.py  test_registry.py
