[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-agents"
version = "0.1.0"
description = "Agentic MLOps Orchestration - AI agents that make decisions, not just execute scripts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Drey Now" },
]
keywords = ["mlops", "agents", "ml-pipeline", "orchestration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
ollama = ["ollama>=0.4"]
observatory = ["kanoniv-auth>=0.3.0"]
gcp = [
    "google-cloud-aiplatform>=1.70",
    "google-cloud-storage>=2.18",
    "google-cloud-bigquery>=3.25",
    "google-cloud-pubsub>=2.23",
    "google-cloud-run>=0.10",
    "google-cloud-monitoring>=2.20",
    "google-cloud-artifact-registry>=1.11",
]
monitoring = [
    "evidently>=0.4",
    "great-expectations>=1.0",
]
serving = ["fastapi>=0.115", "uvicorn>=0.32"]
all = [
    "mlops-agents[claude,openai,ollama,gcp,monitoring,serving]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
mlops-agents = "mlops_agents.cli.main:app"

[project.urls]
Homepage = "https://github.com/dreynow/mlops-agents"
Repository = "https://github.com/dreynow/mlops-agents"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
